[package]
name = "shark_port"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
serde = { version = "1.0.130", features = ["derive"] }
serde_derive = "1.0.130"
serde_json = "1.0.68"
tungstenite = {version = "0.18.0", features = ["native-tls"]}
url = "2.3.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
lazy_static = "1.4.0"